fix: close button alignment

--- a/packages/components/src/components/notification-toast/notification-toast.css
+++ b/packages/components/src/components/notification-toast/notification-toast.css
@@ -144,7 +144,7 @@
 
 .notification-toast__button-close {
   position: absolute;
-  top: 8px;
+  top: 10px;
   right: 13.5px;
   color: #191919;
   border: none;
